Explode Fixes + Cleanup